ajout de la partie securite

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 server.port=8085
 
+jwt.secret=abcdefghijklmnopqrstuvwxyABCDEFGHIJKLMNOPQRSTUVWX
+
